# Team-1-DataStrucure-7166

./: Proceso.cpp  Proceso.h  README.md
I-PARCIAL/Extras/lista circular doble test/: Archivo.cpp  Archivo.h  ListaCircularDoble.cpp  ListaCircularDoble.h  Nodo.h  Validaciones.h  nodo.cpp
I-PARCIAL/Proyecto/: PresentacionProyecto.pptx  Proyecto_Parcial1.oom
I-PARCIAL/Proyecto/ProjectAltV3/: Administrador.cpp  Administrador.h  Alumno.cpp  Alumno.h  Archivo.cpp  Archivo.h  Asignatura.h
I-PARCIAL/Proyecto/ProyectoFInalPrimerParcial/: Administrador.cpp  Alumno.cpp  Alumno.h  Alumnos.txt  Archivo.cpp  Archivo.h  Asignatura.cpp  ListaCircularDoble.cpp  ListaCircularDoble.h  Login.cpp  Login.h  MainProyecto.cpp  Nodo.cpp  Nodo.h  Persona.cpp  Persona.h  Profesor.h  (+5 more)
I-PARCIAL/Tareas/Tarea_1SumaFracciones/: CMakeLists.txt  Fraccion.cpp  Fraccion.h  Operacion.cpp  Operacion.h  diagrama_sumaFracciones.oom
I-PARCIAL/Tareas/Tarea_1SumaFracciones/SumaFracciones/: main.cpp
I-PARCIAL/Tareas/Tarea_1SumaFracciones/UnitTestSumaFracciones/: UnitTestSumaFracciones.cpp  UnitTestSumaFracciones.vcxproj  UnitTestSumaFracciones.vcxproj.filters
I-PARCIAL/Tareas/Tarea_1SumaFracciones/UnitTestSumaFracciones/Debug/: UnitTestSumaFracciones.dll.recipe  UnitTestSumaFracciones.ilk  UnitTestSumaFracciones.pch  vc142.idb
I-PARCIAL/Tareas/Tarea_1SumaFracciones/UnitTestSumaFracciones/Debug/UnitTest.A88CE9E1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnitTestSumaFracciones.lastbuildstate  UnitTestSumaFracciones.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+749 files in other folders)
